tests/adders/adder_d1/add_multitrace.out
Trace 0 executed successfully!

---

error: The two expressions did not evaluate to the same value (in transaction `add(4, 5, 10)`)
   ┌─ adders/adder_d1/add_d1.prot:14:13
   │
14 │   assert_eq(s, DUT.s);
   │             ^^^^^^^^ LHS Value: 10, RHS Value: 9

Trace 1 execution failed.
